Bug 18148 - Definitions with DW_AT_const_value never make it into the psymtabs
Summary: Definitions with DW_AT_const_value never make it into the psymtabs
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: symtab (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-19 18:38 UTC by Andy Wingo
Modified: 2015-04-01 23:57 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andy Wingo 2015-03-19 18:38:09 UTC
LLVM will not allocate storage for the "foo" in "static const int foo = 1".  Instead it inlines the value at the use sites, and emits a DW_TAG_variable with DW_AT_const_value for the definition of "foo".

GCC will allocate storage for both at -O0 but at -O2 the same problem exists.

Unfortunately, partial debug info (PDI) instances without a location don't get added to the psymtabs table.  That means that if you do the following:

   cat <<EOF > one.c
static const int one = 1;

extern int fetch_two (void);

int main (int argc, char *argv[]) 
{
  return one + fetch_two ();
}
EOF
   cat <<EOF > two.c
static const int two = 2;

int fetch_two (void)
{
  return two;
}
EOF
   gcc -g -O2 -c -o one.o one.c
   gcc -g -O2 -c -o two.o two.c
   gcc -g -o test one.o two.o
   gdb ./test

Then at the GDB prompt:

   (gdb) p one
   $1 = 1
   (gdb) p two
   No symbol "two" in current context.

The reason we can get "one" and not "two" is because the symtab for one.c has been expanded, when we went to look for main.  If we expand the compilation unit for two.c and flush the symbol cache, if on GDB trunk:

   (gdb) mt expand foo.c
   # only needed on trunk
   (gdb) mt flush-symbol-cache
   (gdb) print two
   $2 = 2

The ultimate cause is that dwarf2read.c:add_partial_symbol punts if the symbol has no location, thinking it's a declaration and not a definition.  Well if it has a DT_AT_const_value, it might be a definition too.  Patch coming tomorrow.
Comment 1 Sourceware Commits 2015-03-26 18:43:12 UTC
The master branch has been updated by Andy Wingo <wingo@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=ff908ebf8612a737d9e168eca0604ff6c97556bc

commit ff908ebf8612a737d9e168eca0604ff6c97556bc
Author: Andy Wingo <wingo@igalia.com>
Date:   Thu Mar 26 19:41:15 2015 +0100

    Properly intern constants into psymtab
    
    Variables with a DW_AT_const_value but without a DW_AT_location were not
    getting added to the partial symbol table.  They are added to the full
    symbol table, however, when the compilation unit's psymtabs are
    expanded.
    
    Before:
    
       (gdb) p one
       No symbol "one" in current context.
       (gdb) mt flush-symbol-cache
       (gdb) mt expand one.c
       (gdb) p one
       $1 = 1
    
    After:
    
       (gdb) p one
       $1 = 1
    
    To the user it's pretty strange, as depending on whether tab completion
    has forced expansion of all CUs or not the lookup might succeed, or not
    if the failure was already added to the symbol cache.
    
    This commit simply makes sure to add constants to the partial symbol
    tables.
    
    gdb/testsuite/ChangeLog:
    
    	PR symtab/18148
    	* gdb.dwarf2/dw2-intercu.S (one, two): Add variables that have a
    	const_value but not a location.
    	* gdb.dwarf2/dw2-intercu.exp: Add tests that constants without
    	location defined in non-main CUs are visible.
    
    gdb/ChangeLog:
    
    	PR symtab/18148
    	* dwarf2read.c (struct partial_die_info): Add has_const_value
    	member.
    	(add_partial_symbol): Don't punt on symbols that have const_value
    	attributes.
    	(read_partial_die): Detect DW_AT_const_value.
Comment 2 dje 2015-04-01 23:57:30 UTC
Patch committed.